--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack",
+    "dev": "webpack-dev-server",
     "dev:debug": "npm run dev -- --mode development --inspect --debug-brk",
     "debug:webpack": "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack.js --mode development"
   },
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "dts-gen": "^0.5.7",
-    "webpack-cli": "^3.1.2"
+    "html-webpack-plugin": "^4.0.0-beta.4",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
